one example reference of misuse

--- a/manuscript/citations.bib
+++ b/manuscript/citations.bib
@@ -273,6 +273,20 @@
   year =	 2007
 }
 
+@article{tuncer2019online,
+  title =	 {Online Diagnosis of Performance Variation in {HPC} Systems
+                  Using Machine Learning},
+  author =	 {Tuncer, Ozan and Ates, Emre and Zhang, Yijia and Turk, Ata and
+                  Brandt, Jim and Leung, Vitus J and Egele, Manuel and Coskun,
+                  Ayse K},
+  journal =	 {IEEE Transactions on Parallel and Distributed Systems},
+  volume =	 30,
+  number =	 4,
+  pages =	 {883--896},
+  year =	 2019,
+  publisher =	 {IEEE}
+}
+
 @article{weiss1978modification,
   title =	 {Modification of the {K}olmogorov--{S}mirnov Statistic for Use
                   with Correlated Data},
