--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -155,7 +155,9 @@ are known. \citet{lanzante2021testing} tests various strategies for dealing with
 temporal
 dependence and concludes that a test based on Monte-Carlo simulations performed
 the best. When additionally the hypothesized distribution contains unknown
-parameters, the standard KS test becomes even further inapplicable.
+parameters, the standard KS test becomes even further
+inapplicable. Practitioners, however, may have used the test without knowing its
+limitations \citep[e.g.,][]{tuncer2019online}.
 
 
 The contribution of this paper is a demonstration of misuses of the one-sample
